# practice

./: .gitignore  pyproject.toml  run.sh
src/practice/: config.py  download_datasets.py  spark_read.py  spark_session.py
tests/: test_main.py
