[project]
name = "practice"
version = "0.1.0"
description = "A basic Python practice project"
requires-python = ">=3.10"
dependencies = [
    "pyiceberg[s3fs,sql-sqlite]",
    "pyarrow",
    "pandas",
    "boto3",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest","pyspark"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
